css/style.css
body {
	width: 100%;
	background-color: black;
	border-top: 8px solid rgba(255, 255, 255, .4);
	border-bottom: 8px solid rgba(255, 255, 255, .4);
	overflow: hidden;
}
/* pregame start up screens and animations -----------------*/
.startScreen {
	width: 100%;
	height: 100%;
	position: absolute;
	background-color: rgba(0,0,0,.6);
	z-index: 6;

}
.startPrompt {
	margin: 0 5%;
	width: 90%;
	padding: 1%;
	background: url(../images/metal-box-dark.png);
	position: absolute;
	border: 2px solid rgba(0, 255, 0, 1);
	border-radius: 3px;
	-webkit-box-shadow:  -7px 7px 15px 0px rgba(0,255,0,0.55);
	-moz-box-shadow:  -7px 7px 15px 0px rgba(0,255,0,0.55);
	box-shadow:  -7px 7px 15px 0px rgba(0,255,0,0.55);
}
.font-helper {
	text-shadow: 3px 3px 1px rgba(30, 30, 30, .9);
	font-size: 1em;
	line-height: 1;
}
.message-text {
	color: rgba(255, 255, 255, .8);
	font-size: 2.2em;
	text-align: center;
	line-height: 1.5;
	font-family: 'Audiowide', 'cursive';
	text-shadow: 4px 4px 1px rgba(50, 50, 50, .8);
}
.custom-button {
	width: 25%;
	height: 16%;
	margin: 0 auto;
	color: #FFF;
	padding: 2%;
	border: 5px outset lime;
	border-radius: 5px;
	background-color: rgba(0,0,0,.7);
	text-align: center;
	font-size: 2.5em;
	line-height: .7;
	font-family: 'Audiowide', 'cursive';
	text-shadow: 3px 3px 3px rgba(0, 255, 0, .7);
}
.gameStartCountdown3, .gameStartCountdown2, .gameStartCountdown1 {
	width: 100%;
	height: 100%;
	position: absolute;

	z-index: 4;
	display: none;
	transform: translate3d(0,0,0);
	-webkit-transform: translate3d(0,0,0);
	-webkit-transform: translateZ(0);
}
.large-text3, .large-text2, .large-text1 {
	color: #FFF;
	text-align: center;
	font-size: 10em;
	font-family: 'Audiowide', 'cursive';
	text-shadow: 3px 3px 3px rgba(0, 255, 0, .7);
	transform: translate3d(0,0,0);
	-webkit-transform: translate3d(0,0,0);
	-webkit-transform: translateZ(0);
}
/* end of startup animations and sequences -----------------*/
h3, h4 {
	text-align: center;
	padding-top: 1%;
	line-height: 0.3;
	font-family: 'Audiowide', 'cursive'; 
	color: rgba(255, 255, 255, .8);
}
h6 {
	font-size: 6px;
	line-height: 0.2;
	font-family: 'Audiowide', 'cursive';
}
h5 {
	font-size: 1em;
	line-height: 0.2;
	font-family: 'Audiowide', 'cursive';
	color: silver;
}
.sub-font-scale {
	font-size: 2em;
	padding-top: 5px;
}
.container {
	overflow: hidden;
}
.test {
	margin: 0 auto;
	width: 8.8%;
	color: white;
	margin: 0.7%;
	margin-left: 1.2%;
	display: inline-block;
	border: 2px solid rgba(0, 255, 0, 1);
  transition : background-color 200ms linear; 
  -webkit-transition : background-color 100ms linear; 
  -moz-transition : background-color 100ms linear;
  -o-transition : background-color 100ms linear;
	border-radius: 5px;
	-webkit-box-shadow: inset -7px 7px 15px 0 rgba(0,255,0,0.55);
	-moz-box-shadow: inset -7px 7px 15px 0 rgba(0,255,0,0.55);
	box-shadow: inset -7px 7px 15px 0 rgba(0,255,0,0.55);
  outline: 1px solid transparent;

}
.test:hover {
	border: 2px solid rgba(255, 0, 0, 1);
	-webkit-box-shadow: inset -7px 7px 15px 0 rgba(255,0,0,0.55);
	-moz-box-shadow: inset -7px 7px 15px 0 rgba(255,0,0,0.55);
	box-shadow: inset -7px 7px 15px 0 rgba(255,0,0,0.55);
	outline: 1px solid transparent;
}
.markers {
	color: silver;
	width: 100%;
	padding-top: 9%;
	font-family: 'Audiowide', 'cursive'; 
	text-align: center;
	z-index: 20;
}
span {
	font-size: 0;
	width: 1%;
	background-color: yellow;
}

.board-container {
	margin: 0 auto;
	margin-left: 30.5%;
	margin-top: 4%;
	width: 80%;
	position: relative;
	transform: translate3d(0,0,0);
	-webkit-transform: translate3d(0,0,0);
	-webkit-transform: translateZ(0);
}	
.channel-right {
	width: 6%;
	height: 0;
	padding-bottom: 33%;
	float: right;
}
.channel-left {
	width: 8%;
	height: 0;
	padding-bottom: 33%;
	float: left;
}
.nav-bar {
	width: 100%;
	background: url("../images/bg_nav_metal.png");
	height: 0;
	padding-bottom: 5%;
}
.scoreboard {
	width: 100%;
	height: 0;
	padding-bottom: 11%;
}

#main-timer {
	margin: 0 auto;
	margin-top: 1%;
	padding-bottom: 1px;
	width: 30%;
	border: 2px solid rgba(0, 255, 0, 1);
	border-radius: 10px;
	-webkit-box-shadow: inset -7px 7px 15px 0px rgba(0,255,0,0.55);
	-moz-box-shadow: inset -7px 7px 15px 0px rgba(0,255,0,0.55);
	box-shadow: inset -7px 7px 15px 0px rgba(0,255,0,0.55);
}
.timer-text {
	color: rgba(230, 230, 230, .7);
	padding-bottom: 10%;
	text-align: center;
	font-size: 1em;
	line-height: .7;
	font-family: 'Audiowide', 'cursive';
	text-shadow: 2px 2px 2px rgba(155, 155, 155, .7);
}
#timer-name {
	width: 40%;
	background: url("../images/bg_nav_metal.png");
	text-shadow: 1px 1px 1px rgba(0, 255, 0, .2);
	display: inline-block;
	float: left;
	text-align: center;
	color: rgba(255, 255, 255, .8);
}
#timer-count {
	width: 40%;
	padding-top: 3%;
	display: inline-block;
}
.timer-font-scale {
	font-size: 2em;
	padding-top: 5px;
}
#p1-scorebox {
	width: 12%;
	margin-left: 5%;
	margin-top: 1%;
	float: left;
	border: 4px solid rgba(22, 120, 255, 1);
	border-radius: 10px;
	overflow: hidden;
	-webkit-box-shadow: inset -7px 7px 15px 0px rgba(13, 49, 99, 1);
	-moz-box-shadow: inset -7px 7px 15px 0px rgba(13, 49, 99, 1);
	box-shadow: inset -7px 7px 15px 0px rgba(13, 49, 99, 1);
}
#p1-score-name {
	width: 100%;
	float: left;
	padding-left: 5%;
	background: url("../images/bg_nav_metal.png");
	text-shadow: 3px 3px 5px rgba(22, 120, 255, 1);
}
#p1-score {
	width: 100%;
	padding-top: 2%;
	float: left;
	text-shadow: 2px 2px 2px rgba(22, 120, 255, 1);
}
#p1-timer-name {
	width: 30%;
	float: left;
	text-align: center;
	background: url("../images/bg_nav_metal.png");
	border-radius: 10px 0 0 0;
/*	border-right: 2px solid rgba(22, 120, 255, 1);*/
	text-shadow: 3px 3px 5px rgba(22, 120, 255, 1);
}
#p1-timer {
	width: 30%;
	float: left;
	text-shadow: 2px 2px 2px rgba(22, 120, 255, 1);
	display: inline-block;
	border-right: 1px solid rgba(22, 120, 255, 1);
	/*background-color: rgba(22, 120, 255, 0.3);*/
}
/* ... */

